changed <blockquote> to <q> inside author info, made <p> in bloghome <em>

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -46,12 +46,11 @@
             <p>Balancing family, school, and my business is no easy feat, but I’ve learned that time management and a little patience go a long way. Some days are more hectic than others, but I’m always grateful for the journey. I truly believe that it’s never too late to follow your dreams, and I’m proof that you can pursue multiple passions at once—whether it’s raising a family, growing a business, or developing new skills in a tech-driven world.
             </p>
             <p>Thank you for taking the time to learn more about me! I’m excited to share my journey, insights, and projects with you.</p>
-            
-            <blockquote><strong>Carpe Diem.</strong></blockquote>
 
             <div class="author">
               <img src="../images/Untitled design (3).png">
               <h2>About the Author</h2>
+              <q><em>Carpe Diem.</em></q>
               <p>Name: K. Haywood<br>Title: Junior Web Developer<br>School: Udacity<br>Bio: Mom of 3 studying to become a web developer</p>
               <a href="../../index.html">Click to go back Home</a>
             </div>
