--- a/static/html/bloghome.html
+++ b/static/html/bloghome.html
@@ -34,7 +34,7 @@
             <figcaption>Picture of dolphins jumping out of the water</figcaption>
           </figure>
             <h2>Discovering Dolphins: The Playful Guardians of the Ocean</h2>
-            <p>Dolphins are among the most fascinating and intelligent creatures in the ocean. Known for their playful behavior, social nature, and remarkable communication skills, these marine mammals have captured the hearts of people worldwide. But there’s so much more to dolphins than meets the eye. Let’s dive deeper into their world and discover what makes them such extraordinary animals.</p>
+            <p><em>Dolphins are among the most fascinating and intelligent creatures in the ocean. Known for their playful behavior, social nature, and remarkable communication skills, these marine mammals have captured the hearts of people worldwide. But there’s so much more to dolphins than meets the eye. Let’s dive deeper into their world and discover what makes them such extraordinary animals.</em></p>
             <a href="blogpost.html">Read More</a>
         </div>
         <div class="post2">
@@ -43,7 +43,7 @@
             <figcaption>Picture of a woman crafting at a table</figcaption>
           </figure>
             <h2>The Joys of Crafting: Unleashing Creativity and Mindfulness</h2>
-            <p>Crafting is more than just a hobby—it's a way to express creativity, relax, and bring beautiful ideas to life. Whether it's customizing tumblers, creating home decor, or making personalized gifts, crafting allows you to escape into a world of imagination and hands-on fun. There's something deeply satisfying about turning raw materials into something meaningful and unique. Plus, the focus and mindfulness involved in crafting make it a perfect way to unwind and reconnect with yourself. Discover the joy of crafting and let your creativity soar!</p>
+            <p><em>Crafting is more than just a hobby—it's a way to express creativity, relax, and bring beautiful ideas to life. Whether it's customizing tumblers, creating home decor, or making personalized gifts, crafting allows you to escape into a world of imagination and hands-on fun. There's something deeply satisfying about turning raw materials into something meaningful and unique. Plus, the focus and mindfulness involved in crafting make it a perfect way to unwind and reconnect with yourself. Discover the joy of crafting and let your creativity soar!</em></p>
             <a href="blogpost.html">Read More</a>
         </div>
         <div class="post3">
@@ -52,8 +52,8 @@
             <figcaption>Picture of people smiling while on a rollercoaster</figcaption>
           </figure>
             <h2>Family Adventures: Exploring the Best Family-Friendly Theme Parks</h2>
-            <p>In today’s fast-paced world, finding quality time with family can be challenging. This post discusses practical tips and ideas to strengthen family relationships, create lasting memories, and ensure open communication across all ages. Whether through family traditions or new shared experiences, learn how to prioritize what truly matters.
-              Explore how you can nurture and grow your family connections in meaningful ways.</p>
+            <p><em>In today’s fast-paced world, finding quality time with family can be challenging. This post discusses practical tips and ideas to strengthen family relationships, create lasting memories, and ensure open communication across all ages. Whether through family traditions or new shared experiences, learn how to prioritize what truly matters.
+              Explore how you can nurture and grow your family connections in meaningful ways.</em></p>
             <a href="blogpost.html">Read More</a> 
         </div>
         <div class="post4">
@@ -62,8 +62,8 @@
             <figcaption>Picture of a family sitting on couch together, smiling</figcaption>
           </figure>
             <h2> Building Strong Family Bonds in a Modern World</h2>
-            <p>In today’s fast-paced world, finding quality time with family can be challenging. This post discusses practical tips and ideas to strengthen family relationships, create lasting memories, and ensure open communication across all ages. Whether through family traditions or new shared experiences, learn how to prioritize what truly matters.
-              Explore how you can nurture and grow your family connections in meaningful ways.</p>
+            <p><em>In today’s fast-paced world, finding quality time with family can be challenging. This post discusses practical tips and ideas to strengthen family relationships, create lasting memories, and ensure open communication across all ages. Whether through family traditions or new shared experiences, learn how to prioritize what truly matters.
+              Explore how you can nurture and grow your family connections in meaningful ways.</em></p>
             <a href="blogpost.html">Read More</a> 
         </div>
 
